--- a/.github/workflows/Fork_Filter.yml
+++ b/.github/workflows/Fork_Filter.yml
@@ -75,7 +75,7 @@ jobs:
           curl -L -o Loon-repo/Ruleset/fmz200/Ads_RuCu6.list "https://raw.githubusercontent.com/RuCu6/QuanX/main/Rules/MyBlockAds.list"
 
           # 神机规则修正
-          curl -L -o Loon-repo/Ruleset/Unbreak.list "https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Unbreak.list"
+          curl -L -o Loon-repo/Ruleset/Unbreak.list "https://raw.githubusercontent.com/ConnersHua/RuleGo/master/Surge/Ruleset/Direct%2B.list"
 
           # 神机 ConnersHua
           mkdir -p Loon-repo/Ruleset/ConnersHua
